--- a/package.json
+++ b/package.json
@@ -8,14 +8,42 @@
     "ng-dev": "./cli.js",
     "ts-circular-deps": "./ts-circular-dependencies/index.js"
   },
+  "dependencies": {
+    "fs-extra": "4.0.2",
+    "node-uuid": "1.4.8"
+  },
   "peerDependencies": {
+    "@angular/bazel": "^9.0.0",
+    "@angular/core": "^9.0.0",
+    "@angular/platform-browser": "^9.0.0",
+    "@angular/benchpress": "^0.1.0",
+    "@angular-devkit/build-optimizer": "0.900.3",
+    "@bazel/protractor": "1.6.0",
+    "@bazel/terser": "1.6.0",
+    "@bazel/typescript": "1.6.0",
+    "brotli": "^1.3.2",
     "chalk": "^2.3.1",
     "glob": "7.1.2",
+    "json5": "^2.1.2",
     "minimatch": "^3.0.4",
+    "node-uuid": "1.4.8",
+    "protractor": "^5.4.2",
+    "rollup": "~1.25.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-sourcemaps": "^0.4.2",
+    "selenium-webdriver": "3.5.0",
     "shelljs": "^0.8.3",
     "typescript": "~3.8.3",
     "yaml": "^1.7.2",
     "yargs": "15.3.0",
-    "tslib": "^1.10.0"
+    "tslib": "^1.10.0",
+    "zone.js": "^0.10.3"
+  },
+  "bazelWorkspaces": {
+    "npm_dev_infra": {
+      "version": "0.0.0",
+      "rootPath": "."
+    }
   }
 }
