--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "peerDependencies": {
     "chalk": "^2.3.1",
+    "clang-format": "^1.4.0",
+    "cli-progress": "^3.7.0",
     "glob": "7.1.2",
+    "inquirer": "^7.1.0",
     "minimatch": "^3.0.4",
+    "multimatch": "^4.0.0",
     "shelljs": "^0.8.3",
     "typescript": "~3.8.3",
     "yaml": "^1.7.2",
