--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "inquirer": "^7.1.0",
     "minimatch": "^3.0.4",
     "multimatch": "^4.0.0",
+    "semver": "^6.3.0",
     "shelljs": "^0.8.3",
     "typed-graphqlify": "^2.3.0",
     "yaml": "^1.7.2",
