--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "inquirer": "^7.1.0",
     "minimatch": "^3.0.4",
     "multimatch": "^4.0.0",
+    "node-uuid": "1.4.8",
     "semver": "^6.3.0",
     "shelljs": "^0.8.3",
     "typed-graphqlify": "^2.3.0",
@@ -23,15 +24,39 @@
     "yargs": "15.3.0"
   },
   "peerDependencies": {
+    "@angular/bazel": "^9.0.0",
+    "@angular/core": "^9.0.0",
+    "@angular/platform-browser": "^9.0.0",
+    "@angular/benchpress": "^0.1.0",
+    "@angular-devkit/build-optimizer": "0.901.0",
     "@bazel/buildifier": "^0.29.0",
+    "@bazel/protractor": "1.6.0",
+    "@bazel/terser": "1.6.0",
+    "@bazel/typescript": "1.6.0",
+    "brotli": "^1.3.2",
     "clang-format": "^1.4.0",
+    "fs-extra": "4.0.2",
+    "json5": "^1.0.1",
+    "protractor": "^5.4.2",
+    "rollup": "~1.25.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-sourcemaps": "^0.4.2",
+    "selenium-webdriver": "3.5.0",
     "ts-node": "^8.6.2",
     "tslib": "^2.0.0",
-    "typescript": "~3.9.2"
+    "typescript": "~3.9.2",
+    "zone.js": "^0.10.3"
   },
   "peerDependenciesMeta": {
     "ts-node": {
       "optional": true
+    }
+  },
+  "bazelWorkspaces": {
+    "npm_angular_dev_infra_private": {
+      "version": "0.0.0",
+      "rootPath": "."
     }
   }
 }
