--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "ts-circular-deps": "./ts-circular-dependencies/index.js"
   },
   "dependencies": {
+    "@angular/benchpress": "0.2.0",
     "@octokit/graphql": "^4.3.1",
+    "brotli": "^1.3.2",
     "chalk": "^2.3.1",
     "cli-progress": "^3.7.0",
     "glob": "7.1.2",
@@ -19,36 +21,32 @@
     "node-uuid": "1.4.8",
     "semver": "^6.3.0",
     "shelljs": "^0.8.3",
+    "tslib": "^2.0.0",
     "typed-graphqlify": "^2.3.0",
     "yaml": "^1.7.2",
     "yargs": "15.3.0"
   },
   "peerDependencies": {
-    "@angular/bazel": "^9.0.0",
-    "@angular/core": "^9.0.0",
-    "@angular/platform-browser": "^9.0.0",
-    "@angular/benchpress": "^0.1.0",
-    "@angular-devkit/build-optimizer": "0.1000.0-rc.2",
     "@bazel/buildifier": "^0.29.0",
-    "@bazel/protractor": "1.7.0",
-    "@bazel/terser": "1.7.0",
-    "@bazel/typescript": "1.7.0",
-    "brotli": "^1.3.2",
     "clang-format": "^1.4.0",
-    "fs-extra": "4.0.2",
-    "json5": "^1.0.1",
     "protractor": "^5.4.2",
-    "rollup": "~1.25.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-sourcemaps": "^0.4.2",
     "selenium-webdriver": "3.5.0",
     "ts-node": "^8.6.2",
-    "tslib": "^2.0.0",
-    "typescript": "~3.9.5",
-    "zone.js": "^0.10.3"
+    "typescript": "~3.9.5"
   },
   "peerDependenciesMeta": {
+    "@bazel/buildifier": {
+      "optional": true
+    },
+    "clang-format": {
+      "optional": true
+    },
+    "protractor": {
+      "optional": true
+    },
+    "selenium-webdriver": {
+      "optional": true
+    },
     "ts-node": {
       "optional": true
     }
