--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@angular/benchpress": "0.2.0",
     "@octokit/graphql": "^4.3.1",
+    "@octokit/types": "^5.0.1",
     "brotli": "^1.3.2",
     "chalk": "^2.3.1",
     "cli-progress": "^3.7.0",
