4b4b74548d fix(dev-infra): include `bazel` utility files in npm package (#37891)

--- a/_BUILD.bazel
+++ b/_BUILD.bazel
@@ -39,6 +39,7 @@ pkg_npm(
     name = "npm_package",
     srcs = [
         "BUILD.bazel",
+        "@npm_angular_dev_infra_private//bazel:files",
         "@npm_angular_dev_infra_private//benchmark:files",
     ],
     substitutions = {
