--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@angular/benchpress": "0.2.1",
     "@octokit/graphql": "^4.3.1",
     "@octokit/types": "^5.0.1",
+    "@octokit/rest": "16.28.7",
     "brotli": "^1.3.2",
     "chalk": "^2.3.1",
     "cli-progress": "^3.7.0",
     "glob": "7.1.2",
     "inquirer": "^7.3.3",
+    "inquirer-autocomplete-prompt": "^1.0.2",
     "minimatch": "^3.0.4",
     "multimatch": "^4.0.0",
     "node-fetch": "^2.6.0",
@@ -26,9 +28,7 @@
     "tslib": "^2.0.0",
     "typed-graphqlify": "^2.3.0",
     "yaml": "^1.10.0",
-    "yargs": "^15.4.1"
-  },
-  "peerDependencies": {
+    "yargs": "^15.4.1",
     "@bazel/buildifier": "^0.29.0",
     "clang-format": "^1.4.0",
     "protractor": "^5.4.2",
