db56cf18ba build: upgrade angular build, integration/bazel and @angular/bazel package to rule_nodejs 2.2.0 (#37727)

--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
   },
   "bazelWorkspaces": {
     "npm_angular_dev_infra_private": {
-      "version": "0.0.0",
+      "version": "0.0.0-PLACEHOLDER",
       "rootPath": "."
     }
   }
