--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
   },
   "bazelWorkspaces": {
     "npm_angular_dev_infra_private": {
-      "version": "0.0.0-PLACEHOLDER",
+      "version": "0.0.0",
       "rootPath": "."
     }
   }
