--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "shelljs": "^0.8.3",
     "typed-graphqlify": "^2.3.0",
     "yaml": "^1.7.2",
-    "yargs": "15.3.0"
+    "yargs": "^16.1.1"
   },
   "peerDependencies": {
     "@bazel/buildifier": "^0.29.0",
