--- a/benchmark/BUILD.bazel
+++ b/benchmark/BUILD.bazel
@@ -4,9 +4,9 @@ package(default_visibility = ["//visibility:public"])
 filegroup(
     name = "files",
     srcs = glob(["*"]) + [
-        "@npm_angular_dev_infra_private//benchmark/brotli-cli:files",
-        "@npm_angular_dev_infra_private//browsers:files",
-        "@npm_angular_dev_infra_private//benchmark/component_benchmark:files",
-        "@npm_angular_dev_infra_private//benchmark/ng_rollup_bundle:files",
+        "@npm//@angular/dev-infra-private/benchmark/brotli-cli:files",
+        "@npm//@angular/dev-infra-private/browsers:files",
+        "@npm//@angular/dev-infra-private/benchmark/component_benchmark:files",
+        "@npm//@angular/dev-infra-private/benchmark/ng_rollup_bundle:files",
     ],
 )
