--- a/benchmark/component_benchmark/BUILD.bazel
+++ b/benchmark/component_benchmark/BUILD.bazel
@@ -8,5 +8,5 @@ exports_files([
 # Make source files available for distribution via pkg_npm
 filegroup(
     name = "files",
-    srcs = glob(["*"]) + ["@npm_angular_dev_infra_private//benchmark/component_benchmark/defaults:files"],
+    srcs = glob(["*"]) + ["@npm//@angular/dev-infra-private/benchmark/component_benchmark/defaults:files"],
 )
