--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "brotli": "^1.3.2",
     "chalk": "^2.3.1",
     "cli-progress": "^3.7.0",
+    "conventional-commits-parser": "^3.2.1",
     "glob": "7.1.2",
     "inquirer": "^7.3.3",
     "minimatch": "^3.0.4",
