--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chalk": "^2.3.1",
     "cli-progress": "^3.7.0",
     "conventional-commits-parser": "^3.2.1",
+    "ejs": "^3.1.6",
     "git-raw-commits": "^2.0.10",
     "glob": "7.1.2",
     "inquirer": "^7.3.3",
