--- a/bazel/BUILD.bazel
+++ b/bazel/BUILD.bazel
@@ -5,5 +5,6 @@ filegroup(
     srcs = [
         "BUILD.bazel",
         "expand_template.bzl",
+        "@npm//@angular/dev-infra-private/bazel/remote-execution:files",
     ],
 )
