0dad375de7 fix(common): initialize currencyCode in currencyPipe (#40505)

--- a/bazel/BUILD.bazel
+++ b/bazel/BUILD.bazel
@@ -5,6 +5,7 @@ filegroup(
     srcs = [
         "BUILD.bazel",
         "expand_template.bzl",
+        "@npm//@angular/dev-infra-private/bazel/browsers:files",
         "@npm//@angular/dev-infra-private/bazel/remote-execution:files",
     ],
 )
