--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "@angular/benchpress": "0.2.1",
     "@octokit/graphql": "^4.6.1",
-    "@octokit/types": "^6.0.0",
-    "@octokit/rest": "16.43.2",
+    "@octokit/types": "^6.16.6",
+    "@octokit/rest": "^18.6.2",
     "brotli": "^1.3.2",
     "chalk": "^4.1.0",
     "cli-progress": "^3.7.0",
