--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@angular/benchpress": "0.2.1",
+    "@bazel/buildifier": "^4.0.1",
+    "@bazel/runfiles": "3.6.0",
+    "@microsoft/api-extractor": "7.7.11",
     "@octokit/graphql": "^4.6.1",
-    "@octokit/types": "^6.16.6",
     "@octokit/rest": "^18.6.2",
+    "@octokit/types": "^6.16.6",
     "brotli": "^1.3.2",
     "chalk": "^4.1.0",
+    "clang-format": "^1.4.0",
     "cli-progress": "^3.7.0",
     "conventional-commits-parser": "^3.2.1",
     "ejs": "^3.1.6",
@@ -26,18 +30,16 @@
     "node-fetch": "^2.6.1",
     "node-uuid": "1.4.8",
     "ora": "^5.0.0",
-    "semver": "^7.3.5",
-    "shelljs": "^0.8.4",
-    "tslib": "^2.2.0",
-    "typed-graphqlify": "^3.1.1",
-    "yaml": "^1.10.0",
-    "yargs": "^17.0.0",
-    "@bazel/buildifier": "^4.0.1",
-    "clang-format": "^1.4.0",
     "protractor": "^7.0.0",
     "selenium-webdriver": "3.5.0",
+    "semver": "^7.3.5",
+    "shelljs": "^0.8.4",
     "ts-node": "^10.0.0",
-    "typescript": "~4.3.4"
+    "tslib": "^2.2.0",
+    "typed-graphqlify": "^3.1.1",
+    "typescript": "~4.3.4",
+    "yaml": "^1.10.0",
+    "yargs": "^17.0.0"
   },
   "peerDependenciesMeta": {
     "@bazel/buildifier": {
