--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@angular/benchpress": "0.2.1",
     "@bazel/buildifier": "^4.0.1",
     "@bazel/runfiles": "3.6.0",
-    "@microsoft/api-extractor": "7.7.11",
+    "@microsoft/api-extractor": "7.17.1",
     "@octokit/graphql": "^4.6.1",
-    "@octokit/rest": "16.43.2",
-    "@octokit/types": "^6.0.0",
+    "@octokit/rest": "^18.6.2",
+    "@octokit/types": "^6.16.6",
     "brotli": "^1.3.2",
     "chalk": "^4.1.0",
     "clang-format": "^1.4.0",
