--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@angular/benchpress": "0.2.1",
     "@bazel/buildifier": "^4.0.1",
-    "@bazel/runfiles": "3.7.0",
+    "@bazel/runfiles": "4.0.0-beta.0",
     "@microsoft/api-extractor": "7.18.1",
     "@octokit/graphql": "^4.6.1",
     "@octokit/rest": "^18.6.2",
