--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
     "target": "es2020",
     "lib": ["es2020"],
     "strict": true,
+    "noImplicitOverride": true,
+    "noImplicitReturns": true,
     "moduleResolution": "node"
   }
 }
