main - 8e436b8 refactor(ng-dev): remove unneeded type definition packages (#152)

--- a/bazel/benchmark/driver-utilities/BUILD.bazel
+++ b/bazel/benchmark/driver-utilities/BUILD.bazel
@@ -11,7 +11,7 @@ ts_library(
         "@npm//@angular/benchpress",
         "@npm//@types/node",
         "@npm//@types/selenium-webdriver",
-        "@npm//node-uuid",
+        "@npm//@types/uuid",
         "@npm//protractor",
         "@npm//selenium-webdriver",
     ],
