--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "@octokit/plugin-rest-endpoint-methods": "^5.3.3",
     "@octokit/rest": "^18.7.0",
     "@octokit/types": "^6.16.6",
-    "@types/chalk": "^2.2.0",
     "@types/cli-progress": "^3.9.1",
     "@types/conventional-commits-parser": "^3.0.1",
     "@types/ejs": "^3.0.6",
@@ -41,9 +40,8 @@
     "@types/node-fetch": "^2.5.10",
     "@types/semver": "^7.3.6",
     "@types/shelljs": "^0.8.8",
-    "@types/yaml": "^1.9.7",
+    "@types/uuid": "^8.3.1",
     "@types/yargs": "^17.0.0",
-    "brotli": "^1.3.2",
     "chalk": "^4.1.0",
     "clang-format": "^1.4.0",
     "cli-progress": "^3.7.0",
@@ -59,7 +57,6 @@
     "multimatch": "^5.0.0",
     "nock": "^13.0.3",
     "node-fetch": "^2.6.1",
-    "node-uuid": "1.4.8",
     "ora": "^5.0.0",
     "prettier": "^2.3.2",
     "protractor": "^7.0.0",
@@ -74,6 +71,7 @@
     "tslint": "^6.1.3",
     "typed-graphqlify": "^3.1.1",
     "typescript": "~4.3.5",
+    "uuid": "^8.3.2",
     "yaml": "^1.10.0",
     "yargs": "^17.0.0"
   }
