--- a/bazel/BUILD.bazel
+++ b/bazel/BUILD.bazel
@@ -7,6 +7,7 @@ filegroup(
         "@npm//@angular/dev-infra-private/bazel/api-golden:files",
         "@npm//@angular/dev-infra-private/bazel/benchmark:files",
         "@npm//@angular/dev-infra-private/bazel/browsers:files",
+        "@npm//@angular/dev-infra-private/bazel/constraints:files",
         "@npm//@angular/dev-infra-private/bazel/remote-execution:files",
     ],
     visibility = ["//:npm"],
