--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   },
   "private": true,
   "scripts": {
-    "ng-dev": "ts-node --transpile-only ./ng-dev/cli.ts"
+    "ng-dev": "ts-node --transpile-only ./ng-dev/cli.ts",
+    "update-generated-files": "ts-node --transpile-only ./tools/update-generated-files.ts"
   },
   "dependencies": {
     "@actions/core": "^1.4.0",
