main - 6aecdfb feat(bazel): support for terser v5 and 2020 in rollup_bundle rule (#215)

--- a/bazel/benchmark/ng_rollup_bundle/terser_config.json
+++ b/bazel/benchmark/ng_rollup_bundle/terser_config.json
@@ -1,6 +1,6 @@
 {
-  "output": {
-    "ecma": "es2015",
+  "format": {
+    "ecma": "es2020",
     "comments": false,
     "beautify": "bazel_debug"
   },
