--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,18 @@
   "compilerOptions": {
     "module": "CommonJS",
     "target": "es2020",
-    "lib": ["es2020"],
+    "lib": ["DOM", "es2020"],
     "strict": true,
     "noImplicitOverride": true,
     "noImplicitReturns": true,
-    "moduleResolution": "node"
-  }
+    "moduleResolution": "node",
+    "noEmit": false
+  },
+  "include": [
+    "bazel/",
+    "github-actions/",
+    "ng-dev/",
+    "tools/",
+    "tslint-rules/",
+  ]
 }
