--- a/bazel/browsers/firefox/BUILD.bazel
+++ b/bazel/browsers/firefox/BUILD.bazel
@@ -1,4 +1,5 @@
 load("@io_bazel_rules_webtesting//web:web.bzl", "browser")
+load("@npm//@angular/dev-infra-private/bazel/browsers:browser_toolchain_alias.bzl", "browser_toolchain_alias")
 
 package(default_visibility = ["//visibility:public"])
 
@@ -31,6 +32,16 @@ browser(
             "@org_mozilla_geckodriver_macos_arm64//:metadata",
         ],
         "//conditions:default": [],
+    }),
+)
+
+browser_toolchain_alias(
+    name = "toolchain_alias",
+    metadata = select({
+        "@npm//@angular/dev-infra-private/bazel/constraints:linux_x64": "@org_mozilla_firefox_linux_x64//:metadata",
+        # Firefox has a launcher that conditionally starts x64/arm64
+        "@npm//@angular/dev-infra-private/bazel/constraints:macos_x64": "@org_mozilla_firefox_macos//:metadata",
+        "@npm//@angular/dev-infra-private/bazel/constraints:macos_arm64": "@org_mozilla_firefox_macos//:metadata",
     }),
 )
 
