--- a/bazel/browsers/chromium/BUILD.bazel
+++ b/bazel/browsers/chromium/BUILD.bazel
@@ -3,39 +3,36 @@ load("@npm//@angular/dev-infra-private/bazel/browsers:browser_toolchain_alias.bz
 
 package(default_visibility = ["//visibility:public"])
 
+PLATFORM_METADATA = select({
+    "@npm//@angular/dev-infra-private/bazel/constraints:linux_x64": [
+        "@org_chromium_chromedriver_linux_x64//:metadata",
+        "@org_chromium_chromium_linux_x64//:metadata",
+    ],
+    "@npm//@angular/dev-infra-private/bazel/constraints:macos_x64": [
+        "@org_chromium_chromedriver_macos_x64//:metadata",
+        "@org_chromium_chromium_macos_x64//:metadata",
+    ],
+    "@npm//@angular/dev-infra-private/bazel/constraints:macos_arm64": [
+        "@org_chromium_chromedriver_macos_arm64//:metadata",
+        "@org_chromium_chromium_macos_arm64//:metadata",
+    ],
+    "@npm//@angular/dev-infra-private/bazel/constraints:windows_x64": [
+        "@org_chromium_chromedriver_windows//:metadata",
+        "@org_chromium_chromium_windows//:metadata",
+    ],
+})
+
 browser(
     name = "chromium",
     metadata = "chromium.json",
-    deps = [
+    deps = PLATFORM_METADATA + [
         "@io_bazel_rules_webtesting//go/wsl",
-    ] + select({
-        "@npm//@angular/dev-infra-private/bazel/constraints:linux_x64": [
-            "@org_chromium_chromedriver_linux_x64//:metadata",
-            "@org_chromium_chromium_linux_x64//:metadata",
-        ],
-        "@npm//@angular/dev-infra-private/bazel/constraints:macos_x64": [
-            "@org_chromium_chromedriver_macos_x64//:metadata",
-            "@org_chromium_chromium_macos_x64//:metadata",
-        ],
-        "@npm//@angular/dev-infra-private/bazel/constraints:macos_arm64": [
-            "@org_chromium_chromedriver_macos_arm64//:metadata",
-            "@org_chromium_chromium_macos_arm64//:metadata",
-        ],
-        "@npm//@angular/dev-infra-private/bazel/constraints:windows_x64": [
-            "@org_chromium_chromedriver_windows//:metadata",
-            "@org_chromium_chromium_windows//:metadata",
-        ],
-    }),
+    ],
 )
 
 browser_toolchain_alias(
     name = "toolchain_alias",
-    metadata = select({
-        "@npm//@angular/dev-infra-private/bazel/constraints:linux_x64": "@org_chromium_chromium_linux_x64//:metadata",
-        "@npm//@angular/dev-infra-private/bazel/constraints:macos_x64": "@org_chromium_chromium_macos_x64//:metadata",
-        "@npm//@angular/dev-infra-private/bazel/constraints:macos_arm64": "@org_chromium_chromium_macos_arm64//:metadata",
-        "@npm//@angular/dev-infra-private/bazel/constraints:windows_x64": "@org_chromium_chromium_windows//:metadata",
-    }),
+    deps = PLATFORM_METADATA,
 )
 
 # Make source files available for distribution via pkg_npm
