--- a/bazel/browsers/firefox/BUILD.bazel
+++ b/bazel/browsers/firefox/BUILD.bazel
@@ -3,6 +3,24 @@ load("@npm//@angular/dev-infra-private/bazel/browsers:browser_toolchain_alias.bz
 
 package(default_visibility = ["//visibility:public"])
 
+PLATFORM_METADATA = select({
+    "@npm//@angular/dev-infra-private/bazel/constraints:linux_x64": [
+        "@org_mozilla_firefox_linux_x64//:metadata",
+        "@org_mozilla_geckodriver_linux_x64//:metadata",
+    ],
+    "@npm//@angular/dev-infra-private/bazel/constraints:macos_x64": [
+        # Firefox has a launcher that conditionally starts x64/arm64
+        "@org_mozilla_firefox_macos//:metadata",
+        "@org_mozilla_geckodriver_macos_x64//:metadata",
+    ],
+    "@npm//@angular/dev-infra-private/bazel/constraints:macos_arm64": [
+        # Firefox has a launcher that conditionally starts x64/arm64
+        "@org_mozilla_firefox_macos//:metadata",
+        "@org_mozilla_geckodriver_macos_arm64//:metadata",
+    ],
+    "//conditions:default": [],
+})
+
 browser(
     name = "firefox",
     disabled = select({
@@ -14,35 +32,14 @@ browser(
         "//conditions:default": None,
     }),
     metadata = "firefox.json",
-    deps = [
+    deps = PLATFORM_METADATA + [
         "@io_bazel_rules_webtesting//go/wsl",
-    ] + select({
-        "@npm//@angular/dev-infra-private/bazel/constraints:linux_x64": [
-            "@org_mozilla_firefox_linux_x64//:metadata",
-            "@org_mozilla_geckodriver_linux_x64//:metadata",
-        ],
-        "@npm//@angular/dev-infra-private/bazel/constraints:macos_x64": [
-            # Firefox has a launcher that conditionally starts x64/arm64
-            "@org_mozilla_firefox_macos//:metadata",
-            "@org_mozilla_geckodriver_macos_x64//:metadata",
-        ],
-        "@npm//@angular/dev-infra-private/bazel/constraints:macos_arm64": [
-            # Firefox has a launcher that conditionally starts x64/arm64
-            "@org_mozilla_firefox_macos//:metadata",
-            "@org_mozilla_geckodriver_macos_arm64//:metadata",
-        ],
-        "//conditions:default": [],
-    }),
+    ],
 )
 
 browser_toolchain_alias(
     name = "toolchain_alias",
-    metadata = select({
-        "@npm//@angular/dev-infra-private/bazel/constraints:linux_x64": "@org_mozilla_firefox_linux_x64//:metadata",
-        # Firefox has a launcher that conditionally starts x64/arm64
-        "@npm//@angular/dev-infra-private/bazel/constraints:macos_x64": "@org_mozilla_firefox_macos//:metadata",
-        "@npm//@angular/dev-infra-private/bazel/constraints:macos_arm64": "@org_mozilla_firefox_macos//:metadata",
-    }),
+    deps = PLATFORM_METADATA,
 )
 
 # Make source files available for distribution via pkg_npm
