--- a/bazel/integration/test_runner/BUILD.bazel
+++ b/bazel/integration/test_runner/BUILD.bazel
@@ -14,6 +14,7 @@ ts_library(
         "@npm//@types/node",
         "@npm//@types/tmp",
         "@npm//tmp",
+        "@npm//true-case-path",
     ],
 )
 
