--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/dev-infra-private",
-  "version": "0.0.0-8ac0a8fe87552a393d29f51cee3de8aef322d0d2",
+  "version": "0.0.0-9b9f65a5342def92959a74348b172392d21194bd",
   "bin": {
     "ng-dev": "./ng-dev/cli-bundle.js"
   },
@@ -14,13 +14,14 @@
     "@actions/github": "^5.0.0",
     "@angular-devkit/build-optimizer": "^0.1300.0",
     "@angular/benchpress": "0.2.1",
+    "@babel/core": "^7.16.0",
     "@bazel/bazelisk": "^1.10.1",
     "@bazel/buildifier": "^4.0.1",
-    "@bazel/esbuild": "4.4.2",
-    "@bazel/jasmine": "4.4.2",
-    "@bazel/protractor": "4.4.2",
-    "@bazel/runfiles": "4.4.2",
-    "@bazel/typescript": "4.4.2",
+    "@bazel/esbuild": "4.4.5",
+    "@bazel/jasmine": "4.4.5",
+    "@bazel/protractor": "4.4.5",
+    "@bazel/runfiles": "4.4.5",
+    "@bazel/typescript": "4.4.5",
     "@microsoft/api-extractor": "7.18.19",
     "@octokit/auth-app": "^3.6.0",
     "@octokit/core": "^3.5.1",
@@ -50,11 +51,12 @@
     "node-fetch": "^2.6.1",
     "prettier": "^2.3.2",
     "protractor": "^7.0.0",
-    "rollup": "2.59.0",
+    "rollup": "2.60.0",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "selenium-webdriver": "3.5.0",
     "semver": "^7.3.5",
     "tmp": "^0.2.1",
+    "true-case-path": "^2.2.1",
     "ts-node": "^10.2.1",
     "tslib": "^2.3.0",
     "tslint": "^6.1.3",
@@ -65,6 +67,9 @@
     "yargs": "^17.0.0"
   },
   "devDependencies": {
+    "@angular/compiler": "^13.0.1",
+    "@angular/compiler-cli": "^13.0.1",
+    "@angular/core": "^13.0.1",
     "@octokit/graphql-schema": "^10.72.0",
     "@types/cli-progress": "^3.9.1",
     "@types/conventional-commits-parser": "^3.0.1",
@@ -84,6 +89,7 @@
     "jsdoc": "^3.6.7",
     "minimist": "^1.2.5",
     "protobufjs": "^6.11.2",
+    "rxjs": "^7.4.0",
     "uglify-js": "^3.14.2"
   }
 }
