snapshot-test - 22e3081 refactor: simplify NPM package substitutions to reduce manual edits

--- a/bazel/benchmark/ng_rollup_bundle/BUILD.bazel
+++ b/bazel/benchmark/ng_rollup_bundle/BUILD.bazel
@@ -1,4 +1,4 @@
-package(default_visibility = ["//visibility:public"])
+package(default_visibility = ["@npm//@angular/dev-infra-private/visibility:public"])
 
 exports_files([
     "rollup.config-tmpl.js",
