--- a/bazel/benchmark/brotli-cli/BUILD.bazel
+++ b/bazel/benchmark/brotli-cli/BUILD.bazel
@@ -1,6 +1,6 @@
 load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
 
-package(default_visibility = ["//visibility:public"])
+package(default_visibility = ["@npm//@angular/dev-infra-private/visibility:public"])
 
 nodejs_binary(
     name = "brotli-cli",
@@ -8,7 +8,7 @@ nodejs_binary(
         "cli.js",
     ],
     entry_point = ":cli.js",
-    visibility = ["//visibility:public"],
+    visibility = ["@npm//@angular/dev-infra-private/visibility:public"],
 )
 
 # Make source files available for distribution via pkg_npm
