snapshot-test - 7cd4785 refactor: ship `BUILD.bazel` files for shared scripts

--- a/bazel/BUILD.bazel
+++ b/bazel/BUILD.bazel
@@ -13,5 +13,5 @@ filegroup(
         "@npm//@angular/dev-infra-private/bazel/remote-execution:files",
         "@npm//@angular/dev-infra-private/bazel/spec-bundling:files",
     ],
-    visibility = ["@npm//@angular/dev-infra-private:npm"],
+    visibility = ["//:npm"],
 )
