--- a/bazel/benchmark/component_benchmark/BUILD.bazel
+++ b/bazel/benchmark/component_benchmark/BUILD.bazel
@@ -1,4 +1,4 @@
-package(default_visibility = ["@npm//@angular/dev-infra-private/visibility:public"])
+package(default_visibility = ["//visibility:public"])
 
 exports_files([
     "protractor-perf.conf.js",
