--- a/bazel/remote-execution/cpp/BUILD.bazel
+++ b/bazel/remote-execution/cpp/BUILD.bazel
@@ -1,6 +1,6 @@
 load("@bazel_tools//tools/cpp:cc_toolchain_config.bzl", "cc_toolchain_config")
 
-package(default_visibility = ["@npm//@angular/dev-infra-private/visibility:public"])
+package(default_visibility = ["//visibility:public"])
 
 filegroup(
     name = "files",
