--- a/bazel/spec-bundling/BUILD.bazel
+++ b/bazel/spec-bundling/BUILD.bazel
@@ -1,4 +1,4 @@
-package(default_visibility = ["@npm//@angular/dev-infra-private/visibility:public"])
+package(default_visibility = ["//visibility:public"])
 
 exports_files(["esbuild.config-tmpl.mjs"])
 
