main - 885008c fix(bazel): benchmark angular compilation pipeline not working with APF v13

--- a/shared-scripts/BUILD.bazel
+++ b/shared-scripts/BUILD.bazel
@@ -4,5 +4,6 @@ filegroup(
     name = "static_files",
     srcs = glob(["*"]) + [
         "@npm//@angular/dev-infra-private/shared-scripts/angular-linker:static_files",
+        "@npm//@angular/dev-infra-private/shared-scripts/angular-optimization:static_files",
     ],
 )
