--- a/bazel/benchmark/app_bundling/BUILD.bazel
+++ b/bazel/benchmark/app_bundling/BUILD.bazel
@@ -1,8 +1,8 @@
 package(default_visibility = ["//visibility:public"])
 
 exports_files([
-    "rollup.config-tmpl.js",
     "terser_config.json",
+    "esbuild.config-tmpl.mjs",
 ])
 
 # Make source files available for distribution via pkg_npm
