--- a/shared-scripts/angular-optimization/BUILD.bazel
+++ b/shared-scripts/angular-optimization/BUILD.bazel
@@ -7,8 +7,8 @@ filegroup(
     srcs = glob(["*"]),
 )
 
-# Workaround for: https://github.com/bazelbuild/rules_nodejs/pull/3083.
-# TODO: Remove this once non-generated files can work with the linker.
+# Exposed `js_library` targets need to copy files to `bazel-out`. More details here:
+# https://github.com/bazelbuild/rules_nodejs/pull/3083.
 copy_to_bin(
     name = "js_lib_files",
     srcs = ["esbuild-plugin.mjs"],
@@ -20,7 +20,6 @@ js_library(
     srcs = [":js_lib_files"],
     deps = [
         "@npm//@angular-devkit/build-angular",
-        "@npm//@angular/compiler-cli",
         "@npm//@babel/core",
     ],
 )
