--- a/bazel/benchmark/driver-utilities/BUILD.bazel
+++ b/bazel/benchmark/driver-utilities/BUILD.bazel
@@ -14,6 +14,7 @@ ts_library(
         "@npm//@types/uuid",
         "@npm//protractor",
         "@npm//selenium-webdriver",
+        "@npm//uuid",
     ],
 )
 
