--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "module": "CommonJS",
     "target": "es2020",
     "lib": ["es2020"],
+    "experimentalDecorators": true,
     "strict": true,
     "noImplicitOverride": true,
     "noImplicitReturns": true,
