--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/dev-infra-private",
-  "version": "0.0.0-b01087855d7d84f257a5ea76b68269e5e1582ed1",
+  "version": "0.0.0-3193d949d281cd39ac428c941354c21b5015ced2",
   "bin": {
     "ng-dev": "./ng-dev/cli-bundle.js"
   },
@@ -12,7 +12,7 @@
   "dependencies": {
     "@actions/core": "^1.4.0",
     "@actions/github": "^5.0.0",
-    "@angular-devkit/build-angular": "^13.2.0-rc",
+    "@angular-devkit/build-angular": "13.2.0",
     "@angular/benchpress": "0.2.1",
     "@babel/core": "^7.16.0",
     "@bazel/bazelisk": "^1.10.1",
@@ -70,13 +70,13 @@
     "yargs": "^17.0.0"
   },
   "devDependencies": {
-    "@angular/animations": "^13.2.0-rc",
-    "@angular/bazel": "^13.2.0-rc",
-    "@angular/common": "^13.2.0-rc",
-    "@angular/compiler": "^13.2.0-rc",
-    "@angular/compiler-cli": "^13.2.0-rc",
-    "@angular/core": "^13.2.0-rc",
-    "@angular/platform-browser": "^13.2.0-rc",
+    "@angular/animations": "13.2.0",
+    "@angular/bazel": "13.2.0",
+    "@angular/common": "13.2.0",
+    "@angular/compiler": "13.2.0",
+    "@angular/compiler-cli": "13.2.0",
+    "@angular/core": "13.2.0",
+    "@angular/platform-browser": "13.2.0",
     "@octokit/graphql-schema": "^10.72.0",
     "@types/cli-progress": "^3.9.1",
     "@types/conventional-commits-parser": "^3.0.1",
