--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/dev-infra-private",
-  "version": "0.0.0-c922f5b23611024bc9d94833ae147f6048ab0275",
+  "version": "0.0.0-371b650cc4294b677bad453df3cb9e4a49a0941c",
   "bin": {
     "ng-dev": "./ng-dev/cli-bundle.js"
   },
@@ -9,11 +9,12 @@
     "ng-dev": "ts-node --transpile-only ./ng-dev/cli.ts",
     "update-generated-files": "ts-node --transpile-only ./tools/update-generated-files.ts"
   },
+  "packageManager": "yarn@3.1.1",
   "dependencies": {
     "@actions/core": "^1.4.0",
     "@actions/github": "^5.0.0",
     "@angular-devkit/build-angular": "13.2.0-rc.1",
-    "@angular/benchpress": "0.2.1",
+    "@angular/benchpress": "0.3.0",
     "@babel/core": "^7.16.0",
     "@bazel/bazelisk": "^1.10.1",
     "@bazel/buildifier": "^4.0.1",
@@ -105,5 +106,7 @@
     "wait-on": "^6.0.0",
     "zone.js": "^0.11.4"
   },
-  "packageManager": "yarn@3.1.1"
+  "resolutions": {
+    "@angular/benchpress/@angular/core": "14.0.0-next.0"
+  }
 }
