--- a/bazel/BUILD.bazel
+++ b/bazel/BUILD.bazel
@@ -11,6 +11,7 @@ filegroup(
         "@npm//@angular/dev-infra-private/bazel/esbuild:files",
         "@npm//@angular/dev-infra-private/bazel/http-server:files",
         "@npm//@angular/dev-infra-private/bazel/integration:files",
+        "@npm//@angular/dev-infra-private/bazel/karma:files",
         "@npm//@angular/dev-infra-private/bazel/remote-execution:files",
         "@npm//@angular/dev-infra-private/bazel/spec-bundling:files",
     ],
