--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/dev-infra-private",
-  "version": "0.0.0-8df150f507aca3021467590c860e720009d930b4",
+  "version": "0.0.0-6aa013d221cf32bb34de93694dba5d745f6f2b6a",
   "bin": {
     "ng-dev": "./ng-dev/cli-bundle.js"
   },
@@ -13,10 +13,11 @@
   "dependencies": {
     "@actions/core": "^1.4.0",
     "@actions/github": "^5.0.0",
-    "@angular-devkit/build-angular": "14.0.0-next.0",
+    "@angular-devkit/build-angular": "14.0.0-next.2",
     "@angular/benchpress": "0.3.0",
     "@babel/core": "^7.16.0",
     "@bazel/buildifier": "^4.0.1",
+    "@bazel/concatjs": "4.6.0",
     "@bazel/esbuild": "4.6.0",
     "@bazel/protractor": "4.6.0",
     "@bazel/runfiles": "4.6.0",
@@ -41,7 +42,7 @@
     "git-raw-commits": "^2.0.10",
     "glob": "7.2.0",
     "inquirer": "^8.0.0",
-    "minimatch": "^3.0.4",
+    "minimatch": "^5.0.0",
     "multimatch": "^5.0.0",
     "node-fetch": "^2.6.1",
     "prettier": "^2.3.2",
@@ -62,15 +63,16 @@
     "yargs": "^17.0.0"
   },
   "devDependencies": {
-    "@angular/animations": "14.0.0-next.1",
-    "@angular/bazel": "14.0.0-next.1",
-    "@angular/common": "14.0.0-next.1",
-    "@angular/compiler": "14.0.0-next.1",
-    "@angular/compiler-cli": "14.0.0-next.1",
-    "@angular/core": "14.0.0-next.1",
-    "@angular/platform-browser": "14.0.0-next.1",
+    "@angular/animations": "14.0.0-next.3",
+    "@angular/bazel": "14.0.0-next.3",
+    "@angular/common": "14.0.0-next.3",
+    "@angular/compiler": "14.0.0-next.3",
+    "@angular/compiler-cli": "14.0.0-next.3",
+    "@angular/core": "14.0.0-next.3",
+    "@angular/platform-browser": "14.0.0-next.3",
     "@bazel/bazelisk": "^1.10.1",
     "@bazel/jasmine": "4.6.0",
+    "@google-cloud/storage": "^5.18.1",
     "@octokit/graphql-schema": "^10.72.0",
     "@types/browser-sync": "^2.26.3",
     "@types/cli-progress": "^3.9.1",
@@ -97,15 +99,22 @@
     "jasmine": "^3.7.0",
     "jsdoc": "^3.6.7",
     "jsdom": "^19.0.0",
+    "karma": "^6.3.15",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-firefox-launcher": "^2.1.2",
+    "karma-jasmine": "^4.0.1",
+    "karma-requirejs": "^1.1.0",
+    "karma-sourcemap-loader": "^0.3.8",
     "minimist": "^1.2.5",
     "nock": "^13.0.3",
     "protobufjs": "^6.11.2",
+    "requirejs": "^2.3.6",
     "rxjs": "^7.4.0",
     "uglify-js": "^3.14.2",
     "wait-on": "^6.0.0",
     "zone.js": "^0.11.4"
   },
   "resolutions": {
-    "@angular/benchpress/@angular/core": "14.0.0-next.1"
+    "@angular/benchpress/@angular/core": "14.0.0-next.3"
   }
 }
