--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/dev-infra-private",
-  "version": "0.0.0-8f062920dcfecb735f680aba4d9b26a04bdde429",
+  "version": "0.0.0-6c0576d639238a46fcffb330b350d96745d1c286",
   "bin": {
     "ng-dev": "./ng-dev/cli-bundle.js"
   },
@@ -57,6 +57,7 @@
     "@angular/core": "14.0.0-next.3",
     "@angular/platform-browser": "14.0.0-next.3",
     "@bazel/bazelisk": "^1.10.1",
+    "@bazel/buildifier": "^4.0.1",
     "@bazel/jasmine": "4.6.0",
     "@octokit/auth-app": "^3.6.0",
     "@octokit/core": "^3.5.1",
