main - b309036 build: tag cc_toolchain_suite as manual

--- a/bazel/remote-execution/cpp/BUILD.bazel
+++ b/bazel/remote-execution/cpp/BUILD.bazel
@@ -9,6 +9,7 @@ filegroup(
 
 cc_toolchain_suite(
     name = "cc_toolchain_suite",
+    tags = ["manual"],
     toolchains = {
         "k8": ":cc_compiler_k8",
     },
