main - 543441e build: update tsconfig to exclude node modules and generated directories

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,6 @@
     "noImplicitOverride": true,
     "noImplicitReturns": true,
     "moduleResolution": "node"
-  }
+  },
+  "exclude": ["node_modules/**", "bazel-out/**", "dist/**"]
 }
