snapshot-test - 975e750 ci: run all tests against windows and macos

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/dev-infra-private",
-  "version": "0.0.0-8feef7a4ad17f94a98b55e3fa7ce4697bfaef895",
+  "version": "0.0.0-975e75098c9e1b3da8ad3c93335bfa514fc27af7",
   "bin": {
     "ng-dev": "./ng-dev/bundles/cli.js"
   },
@@ -23,17 +23,17 @@
   },
   "packageManager": "yarn@3.2.0",
   "dependencies": {
-    "@angular-devkit/build-angular": "14.0.0-next.3",
+    "@angular-devkit/build-angular": "14.0.0-next.6",
     "@angular/benchpress": "0.3.0",
     "@babel/core": "^7.16.0",
-    "@bazel/buildifier": "^5.0.1",
-    "@bazel/concatjs": "4.6.0",
-    "@bazel/esbuild": "4.6.0",
-    "@bazel/protractor": "4.6.0",
-    "@bazel/runfiles": "4.6.0",
-    "@bazel/terser": "4.6.0",
-    "@bazel/typescript": "4.6.0",
-    "@microsoft/api-extractor": "7.19.4",
+    "@bazel/buildifier": "5.0.1",
+    "@bazel/concatjs": "5.3.0",
+    "@bazel/esbuild": "5.3.0",
+    "@bazel/protractor": "5.3.0",
+    "@bazel/runfiles": "5.3.0",
+    "@bazel/terser": "5.3.0",
+    "@bazel/typescript": "5.3.0",
+    "@microsoft/api-extractor": "7.19.5",
     "@types/browser-sync": "^2.26.3",
     "@types/node": "16.10.9",
     "@types/node-fetch": "^2.5.10",
@@ -44,16 +44,16 @@
     "@types/yargs": "^17.0.0",
     "browser-sync": "^2.27.7",
     "chalk": "^4.1.0",
-    "clang-format": "^1.6.0",
+    "clang-format": "1.6.0",
     "node-fetch": "^2.6.1",
-    "prettier": "^2.3.2",
+    "prettier": "2.6.1",
     "protractor": "^7.0.0",
     "selenium-webdriver": "4.1.1",
-    "send": "^0.17.2",
+    "send": "^0.18.0",
     "tmp": "^0.2.1",
     "true-case-path": "^2.2.1",
     "tslib": "^2.3.0",
-    "typescript": "~4.5.0",
+    "typescript": "~4.6.2",
     "uuid": "^8.3.2",
     "yargs": "^17.0.0",
     "zone.js": "^0.11.4"
@@ -61,15 +61,15 @@
   "devDependencies": {
     "@actions/core": "^1.4.0",
     "@actions/github": "^5.0.0",
-    "@angular/animations": "14.0.0-next.4",
-    "@angular/bazel": "14.0.0-next.4",
-    "@angular/common": "14.0.0-next.4",
-    "@angular/compiler": "14.0.0-next.4",
-    "@angular/compiler-cli": "14.0.0-next.4",
-    "@angular/core": "14.0.0-next.4",
-    "@angular/platform-browser": "14.0.0-next.4",
-    "@bazel/bazelisk": "^1.10.1",
-    "@bazel/jasmine": "4.6.0",
+    "@angular/animations": "14.0.0-next.9",
+    "@angular/bazel": "14.0.0-next.9",
+    "@angular/common": "14.0.0-next.9",
+    "@angular/compiler": "14.0.0-next.9",
+    "@angular/compiler-cli": "14.0.0-next.9",
+    "@angular/core": "14.0.0-next.9",
+    "@angular/platform-browser": "14.0.0-next.9",
+    "@bazel/bazelisk": "^1.11.0",
+    "@bazel/jasmine": "5.3.0",
     "@google-cloud/storage": "^5.18.1",
     "@octokit/auth-app": "^3.6.0",
     "@octokit/core": "^3.5.1",
@@ -87,7 +87,7 @@
     "@types/git-raw-commits": "^2.0.0",
     "@types/glob": "^7.1.3",
     "@types/inquirer": "8.2.0",
-    "@types/jasmine": "^3.7.0",
+    "@types/jasmine": "^4.0.0",
     "@types/jsdom": "^16.2.13",
     "@types/semver": "^7.3.6",
     "@types/wait-on": "^5.3.1",
@@ -101,7 +101,7 @@
     "glob": "7.2.0",
     "husky": "^7.0.1",
     "inquirer": "^8.0.0",
-    "jasmine": "^3.7.0",
+    "jasmine": "~4.0.0",
     "jsdoc": "^3.6.7",
     "jsdom": "^19.0.0",
     "karma": "^6.3.15",
@@ -127,6 +127,6 @@
     "yaml": "^1.10.0"
   },
   "resolutions": {
-    "@angular/benchpress/@angular/core": "14.0.0-next.4"
+    "@angular/benchpress/@angular/core": "14.0.0-next.9"
   }
 }
