--- a/bazel/api-golden/BUILD.bazel
+++ b/bazel/api-golden/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@npm//@bazel/typescript:index.bzl", "ts_library")
+load("@npm//@bazel/concatjs:index.bzl", "ts_library")
 
 package(default_visibility = ["//visibility:public"])
 
@@ -13,6 +13,7 @@ ts_library(
         "find_entry_points.ts",
         "index.ts",
         "index_npm_packages.ts",
+        "path-normalize.ts",
         "test_api_report.ts",
     ],
     # A tsconfig needs to be specified as otherwise `ts_library` will look for the config
