main - c8b0307 fixup! feat(apps): create base of prs application

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "module": "CommonJS",
     "target": "es2020",
-    "lib": ["es2020"],
+    "lib": ["es2020", "dom"],
     "experimentalDecorators": true,
     "strict": true,
     "noImplicitOverride": true,
