main - 9a32ed6 build: fix buildifier lint errors in `index.bzl` for `integration` rule

--- a/bazel/benchmark/brotli-cli/BUILD.bazel
+++ b/bazel/benchmark/brotli-cli/BUILD.bazel
@@ -8,6 +8,7 @@ nodejs_binary(
         "cli.cjs",
     ],
     entry_point = ":cli.cjs",
+    templated_args = ["--nobazel_run_linker"],
     visibility = ["//visibility:public"],
 )
 
