--- a/bazel/http-server/BUILD.bazel
+++ b/bazel/http-server/BUILD.bazel
@@ -38,5 +38,5 @@ nodejs_binary(
         ":server_lib",
     ],
     entry_point = ":main.ts",
-    templated_args = ["--bazel_patch_module_resolver"],
+    templated_args = ["--nobazel_run_linker"],
 )
