main - 4627840 feat(bazel): move js mapping size tracking tool to dev-infra

--- a/bazel/BUILD.bazel
+++ b/bazel/BUILD.bazel
@@ -13,6 +13,7 @@ filegroup(
         "@npm//@angular/dev-infra-private/bazel/http-server:files",
         "@npm//@angular/dev-infra-private/bazel/integration:files",
         "@npm//@angular/dev-infra-private/bazel/karma:files",
+        "@npm//@angular/dev-infra-private/bazel/map-size-tracking:files",
         "@npm//@angular/dev-infra-private/bazel/remote-execution:files",
         "@npm//@angular/dev-infra-private/bazel/spec-bundling:files",
     ],
