--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/dev-infra-private",
-  "version": "0.0.0-96d3b407453ab3baa72425c05e437626f040ae39",
+  "version": "0.0.0-4627840d02f712732735fbd116a29b088e896e49",
   "bin": {
     "ng-dev": "./ng-dev/bundles/cli.mjs"
   },
@@ -51,6 +51,7 @@
     "protractor": "^7.0.0",
     "selenium-webdriver": "4.2.0",
     "send": "^0.18.0",
+    "source-map": "^0.7.4",
     "tmp": "^0.2.1",
     "true-case-path": "^2.2.1",
     "tslib": "^2.3.0",
@@ -141,6 +142,7 @@
     "rxjs": "^7.4.0",
     "semver": "^7.3.5",
     "supports-color": "9.2.2",
+    "terser": "^5.14.1",
     "ts-node": "^10.8.1",
     "tslint": "^6.1.3",
     "typed-graphqlify": "^3.1.1",
