main - 0268158 fix(bazel): ensure terser knows about input sourcemap to trace-back

--- a/bazel/BUILD.bazel
+++ b/bazel/BUILD.bazel
@@ -5,6 +5,7 @@ filegroup(
         "expand_template.bzl",
         "extract_js_module_output.bzl",
         "extract_types.bzl",
+        "filter_outputs.bzl",
         "@npm//@angular/dev-infra-private/bazel/api-golden:files",
         "@npm//@angular/dev-infra-private/bazel/app-bundling:files",
         "@npm//@angular/dev-infra-private/bazel/benchmark:files",
@@ -15,6 +16,7 @@ filegroup(
         "@npm//@angular/dev-infra-private/bazel/integration:files",
         "@npm//@angular/dev-infra-private/bazel/karma:files",
         "@npm//@angular/dev-infra-private/bazel/map-size-tracking:files",
+        "@npm//@angular/dev-infra-private/bazel/private:files",
         "@npm//@angular/dev-infra-private/bazel/remote-execution:files",
         "@npm//@angular/dev-infra-private/bazel/spec-bundling:files",
     ],
